Tue Sep 28 17:55:17 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/latency/bselatencytest.[ic]*: Module which allows automated
	midi latency testing.

Tue Sep 28 10:55:32 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/featuretest.sh: Use -p and -m options to select null
	driver. This allows feature tests to run independantly of audio, and
	at maximum speed.

Mon Sep 27 06:46:10 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/Makefile.am:
	* beast-gtk/bstutils.c: collect debugging keys from C++ files
	and sort the list of debugging keys.

Fri Sep 24 09:12:48 2004  Tim Janik  <timj@gtk.org>

	* configure.in: provide $bsedriverdir.

	* data/Makefile.am: define BSE_PATH_DRIVERS.

	* data/bse.pc.in: define various pkg-config variables to provide
	the sfidl executable and various other paths.

Thu Sep 23 18:11:25 2004  Tim Janik  <timj@gtk.org>

	* docs/beast.1.texi:
	* docs/bsesh.1.texi: document new options.

Thu Sep 23 15:54:04 2004  Tim Janik  <timj@gtk.org>

	* shell/bsesh.c: added support for BSE device listing. implemented
	--help and --version.

Wed Sep 22 23:27:23 2004  Sven Herzberg  <herzi@gnome-de.org>

	* beast-gtk/gxk/gxkcanvas.c: fixed this: if one set the zoom size
	for a text object it was always set to display the 100% zoom font
	size, even if the zoom factor was not 100%

Wed Sep 22 14:26:12 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c: added documentation for --bse-latency,
	--bse-mixing-freq, --bse-control-freq, --bse-pcm-driver,
	--bse-midi-driver, --bse-driver-list. handle -p and -m option
	aliases. don't auto save BSE rc file if any of these PCM setup
	options is given. don't auto save BEAST rc file is preferences
	were saved during program's lifetime. exit after driver list dump
	for --bse-driver-list.

	* beast-gtk/bstpreferences.[hc]: added bst_preferences_saved()
	to figure whether preferences got saved at some point.

Wed Sep 22 01:59:31 2004  Stefan Westerfeld  <stefan@space.twc.de>
