@@ -1,0 +1,3 @@
+Makefile.in
+Makefile
+*.gen-idl.h
