@@ -1,3 +1,9 @@
+Tue Sep 28 18:25:54 2004  Tim Janik  <timj@gtk.org>
+
+	* configure.in: build tests/latency/Makefile.
+
+	* tests/latency/Makefile.am: build bselatencytest plugin.
+
 Tue Sep 28 17:55:17 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/latency/bselatencytest.[ic]*: Module which allows automated
